# msw-tasks-core

./: .gitignore  README.md  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml
src/murineshiftwork/tasks/_calibration_liquid_dynamic/: task.py  task.yaml
src/murineshiftwork/tasks/_calibration_liquid_static/: _calibration_liquid_static.py  task.py  task.yaml
src/murineshiftwork/tasks/_calibration_sound_latency/: task.py
src/murineshiftwork/tasks/_test_barcode_iti/: _test_barcode_iti.py  task.py  task.yaml
src/murineshiftwork/tasks/_test_bpod_connect/: task.yaml
src/murineshiftwork/tasks/_test_bpod_wiring/: task.py  task.yaml
src/murineshiftwork/tasks/_test_flush_valves/: task.py  task.yaml
src/murineshiftwork/tasks/_test_minimal_task/: task.py
src/murineshiftwork/tasks/_test_pulsepal_connect/: _test_pulsepal_connect.py  task.yaml
src/murineshiftwork/tasks/_test_stage_move/: _test_stage_move.py  task.py
src/murineshiftwork/tasks/_test_ttl_barcodes/: _test_ttl_barcodes.py  task.py
src/murineshiftwork/tasks/_test_ttl_outputs/: task.py
src/murineshiftwork/tasks/_test_video/: task.py
